fix: make reg periods wrap

--- a/src/components/Admin/RegistrationPeriods/styles.module.scss
+++ b/src/components/Admin/RegistrationPeriods/styles.module.scss
@@ -3,4 +3,8 @@
     align-items: flex-start;
     justify-content: start;
     width: 100%;
+    flex-wrap: wrap;
+    .regPeriod {
+        flex-basis: 450px;
+    }
 }
